force-app/main/default/objects/Inventory__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Inventories</relationshipLabel>
    <relationshipName>Inventories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>