force-app/main/default/objects/Inventory__c/fields/Unique_Inventory_Code__c.field-meta.xml
<CustomField>
    <fullName>Unique_Inventory_Code__c</fullName>
    <formula>Product__r.Name &amp; &quot;-&quot; &amp; Territory__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Inventory Code</label>
    <type>Text</type>
</CustomField>