force-app/main/default/objects/Inventory__c/validationRules/Inventory_Available_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Inventory_Available_Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>Available_Quantity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Available_Quantity__c</errorDisplayField>
    <errorMessage>The Available Quantity should be more than zero</errorMessage>
</ValidationRule>