force-app/main/default/objects/Inventory__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Territory__c</columns>
    <columns>Available_Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>